<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".DashboardActivity">

    <!-- LinearLayout como contenedor de los botones -->
    <ImageButton
        android:id="@+id/regresarD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <LinearLayout
        android:layout_width="341dp"
        android:layout_height="588dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Botón para Meditación -->
        <Button
            android:id="@+id/btnMeditation"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button"
            android:text="@string/MEDITACIÓN"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.4" />

        <!-- Botón para Respiración -->
        <Button
            android:id="@+id/btnBreathing"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorfondo"
            android:text="@string/RESPIRACIÓN"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnMeditation"
            app:layout_constraintVertical_bias="0.1" />

        <!-- Botón para Consejos -->
        <Button
            android:id="@+id/btnTips"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button"
            android:text="@string/CONSEJOS"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnBreathing"
            app:layout_constraintVertical_bias="0.1" />

        <!-- Botón para Ver Progreso -->
        <Button
            android:id="@+id/btnProgress"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/colorfondo"
            android:text="@string/PROGRESO"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnTips"
            app:layout_constraintVertical_bias="0.1" />

        <Button
            android:id="@+id/btnEstadisticas"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/button"
            android:text="@string/ESTADISTICAS"
            android:textColor="@color/white" />
        <!-- Repite esta estructura para los otros botones -->
        <!-- btnBreathing, btnTips, btnProgress -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
