<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/regresarMa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="7dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/colorfondo"
        android:ems="10"
        android:hint="@string/CONTRASEÑA"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextText"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="275dp"
        android:layout_height="60dp"
        android:layout_marginTop="224dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext"
        android:backgroundTint="@color/colorfondo"
        android:ems="10"
        android:hint="@string/USUARIO"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:shadowColor="@color/black"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.419"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnIngresar"
        android:layout_width="145dp"
        android:layout_height="52dp"
        android:layout_marginTop="220dp"

        android:backgroundTint="@color/button"
        android:text="@string/INGRESAR"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.815"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="145dp"
        android:layout_height="52dp"
        android:layout_marginTop="220dp"
        android:backgroundTint="@color/button"
        android:text="@string/REGISTRARSE"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
